--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,16 +16,52 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
+<header>
+  <div class="content-wrapper">
+    <a href="#"><img src="" alt="unplugged logo"></a>
+    <div class="header-divider">
+      <nav>
+        <ul>
+        <li><a href="faq/index.html">FAQ</a></li>
+        <li><a href="about/index.html">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
 
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <h4>Contact</h4>
+        <address>
+          <p>
+            555-555-5555 <br>
+            hello@unplugged.com>
+          </p>
+        </address>
+        <div class="social-icons">
+          <p><a href="https://www.facebook.com/unplugged" target="_blank"></a></p>
+          <p><a href="https://www.twitter.com/unplugged" target="_blank"></a></p>
+          <p><a href="https://www.instagram.com/unplugged" target="_blank"></a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="copyright">
+      <p>Copyright 2018 | Unplugged  </p>
+    </div>
+</footer>
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
