Updated about page

--- a/faq/index.html
+++ b/faq/index.html
@@ -28,7 +28,7 @@
   <header>
     <div class="content-wrapper">
       <a href="#"><img src="" alt="unplugged logo"></a>
-      <div class="header-divder"></div>
+      <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="faq/index.html">FAQ</a></li>
@@ -46,10 +46,12 @@
           <address>
             <p>
               555-555-5555 <br>
-              hello@unplugged.com>
+              hello@unplugged.com
             </p>
           </address>
-          <div class="social-icons">
+          </div>
+          <div class="social">
+            <h4>Social</h4>
             <p><a href="https://www.facebook.com/unplugged" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/unplugged" target="_blank"></a></p>
             <p><a href="https://www.instagram.com/unplugged" target="_blank"></a></p>
