--- a/about/index.html
+++ b/about/index.html
@@ -29,26 +29,79 @@
     <div class="header-divider">
       <nav>
         <ul>
-        <li><a href="faq/index.html">FAQ</a></li>
+        <li><a href="../faq/index.html">FAQ</a></li>
         <li><a href="about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
-  </div>
-</header>
+  </header>
+  <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <h1>Our Mission - We want to make you the team you always wanted to be.</h1>
+        <div class="mission-content">
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+        </div>
+      </div>
+    </section>
 
+    <!--Map-->
+    <section class="maps">
+      <figure>
+
+      </figure>
+    </section>
+  </div>
+
+
+<div class="contact-section">
+  <div class="contact-wrapper">
+    <h2>Contact us, because you all need this.</h2>
+    <div class="contact-content">
+  </div>
+  <!-- Address-->
+  <h4>General Information</h4>
+  <address>
+    <p>
+      333 Main St, Lake Geneva, WI 53147 <br>
+      555-555-5555<br>
+      hello@unplugged.com
+    </p>
+  </address>
+  </div>
+  <!--talk to someone-->
+  <div>
+    <h4>Chat with a Facilitator</h4>
+    <address>
+    <p>555-555-5556<br>
+      facilitator@unplugged.com
+      </p>
+    </address>
+  </div>
+  </div>
+  </section>
+</main>
+<!--footer-->
 <footer>
   <div class="content-wrapper">
     <div class="footer-content">
+      
       <div class="contact">
         <h4>Contact</h4>
         <address>
           <p>
             555-555-5555 <br>
-            hello@unplugged.com>
+            hello@unplugged.com
           </p>
         </address>
-        <div class="social-icons">
+
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
           <p><a href="https://www.facebook.com/unplugged" target="_blank"></a></p>
           <p><a href="https://www.twitter.com/unplugged" target="_blank"></a></p>
           <p><a href="https://www.instagram.com/unplugged" target="_blank"></a></p>
@@ -56,6 +109,7 @@
       </div>
     </div>
   </div>
+  
     <div class="copyright">
       <p>Copyright 2018 | Unplugged  </p>
     </div>
