--- a/faq/index.html
+++ b/faq/index.html
@@ -31,12 +31,39 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html">FAQ</a></li>
-          <li><a href="about/index.html">About</a></li>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-content">
+        <h4>How do I get to the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+      <div class="faq-content">
+        <h4>What kind of team is right for the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+      <div class="faq-content">
+        <h4>What size teams can you accommodate?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="faq-content">
+        <h4>Is there really no wifi available?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+      
+      </div>
+    </div>
+  </main>
+
+
+
+
 
   <footer>
     <div class="content-wrapper">
@@ -52,6 +79,7 @@
           </div>
           <div class="social">
             <h4>Social</h4>
+            <div class="social-icons">
             <p><a href="https://www.facebook.com/unplugged" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/unplugged" target="_blank"></a></p>
             <p><a href="https://www.instagram.com/unplugged" target="_blank"></a></p>
